compiler/tools/fpp-check/test/port_instance/undef_telemetry.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_telemetry.fpp:3.3
  telemetry port tlmOut
  ^
error: cannot find port `Fw` in this scope
